[project]
name = "modulo-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.2.3",
    "chromadb>=1.3.0",
    "fastapi>=0.120.1",
    "openai>=2.6.1",
    "pypdf>=6.1.3",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
